using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStates
{
    public static string ANIM_RUN = "Run";
    public static string ANIM_ATTACK = "Attack";
    public static string ANIM_SKILL_1 = "Skill1";
    public static string ANIM_SKILL_2 = "Skill2";
    public static string ANIM_SKILL_3 = "Skill3";

    public static string ENEMY_ATTACK = "Attack";
    public static string ENEMY_RUN = "Run";
    public static string ENEMY_BEATTACKED = "BeAttacked";
    public static string ENEMY_DEAD = "Dead";
    public static string ENEMY_VICTORY = "Victory";
    public static string ENEMY_SPEED = "Speed";


}
